Dockerized the service.  Created framework for orchestrations.
