# src/api/services/orchestrations.js
@@ -1,60 +1,88 @@
+'use esversion: 6';
+const orchestrationsFolder = './data/orchestrations/';
+const fs = require('fs');
+const path = require('path');
+
+let lstOrchestrations;
+loadOrchestrations()
+
+function loadOrchestrations() {
+  console.log('Loading all Orchestrations from disk...')
+  const files = fs.readdirSync(orchestrationsFolder);
+  lstOrchestrations = [];
+  files.forEach(file => {
+    lstOrchestrations.push(JSON.parse(fs.readFileSync(path.resolve(orchestrationsFolder, file))));
+  });
+}
+module.exports.lstOrchestrations = lstOrchestrations
+
 /**
  * @param {Object} options
  * @throws {Error}
  * @return {Promise}
  */
-module.exports.findOrchestrations = async (options) => {
-  // Implement your business logic here...
-  //
-  // This function should return as follows:
-  //
-  // return {
-  //   status: 200, // Or another success code.
-  //   data: [] // Optional. You can put whatever you want here.
-  // };
-  //
-  // If an error happens during your business logic implementation,
-  // you should throw an error as follows:
-  //
-  // throw new Error({
-  //   status: 500, // Or another error code.
-  //   error: 'Server Error' // Or another error message.
-  // });
+module.exports.findOrchestrations = async () => {
+  // List all Orchestrations.
+  try {
+    if (lstOrchestrations === undefined) loadOrchestrations();
 
-  return {
-    status: 200,
-    data: 'findOrchestrations ok!'
-  };
+    return {
+      status: 200,
+      data: lstOrchestrations
+    };
+  } catch (err) {
+    return {
+      status: 500,
+      data: err.message
+    };
+  }
 };
 
 /**
  * @param {Object} options
- * @param {} options.body 
+ * @param {} options.body
  * @throws {Error}
  * @return {Promise}
  */
 module.exports.createOrchestration = async (options) => {
-  // Implement your business logic here...
-  //
-  // This function should return as follows:
-  //
-  // return {
-  //   status: 200, // Or another success code.
-  //   data: [] // Optional. You can put whatever you want here.
-  // };
-  //
-  // If an error happens during your business logic implementation,
-  // you should throw an error as follows:
-  //
-  // throw new Error({
-  //   status: 500, // Or another error code.
-  //   error: 'Server Error' // Or another error message.
-  // });
+  try {
+    // Check that the payload has all required elements
+    if (options.body.name == undefined) return {
+      status: 400,
+      data: 'Required element <name> is missing.'
+    };
+    if (options.body.symphonyId == undefined) return {
+      status: 400,
+      data: 'Required element <symphonyId> is missing.'
+    };
+    if (!Number.isInteger(options.body.symphonyId)) return {
+      status: 400,
+      data: 'Element <symphonyId> must be an integer.'
+    };
 
-  return {
-    status: 200,
-    data: 'createOrchestration ok!'
-  };
+    const d = new Date();
+    const newId = d.getTime();
+    const newOrch = {
+      id: newId,
+      name: options.body.name,
+      symphonyId: options.body.symphonyId,
+      actions: [], // Actions will be attached by the actions object
+      triggers: [] // Triggers will be attached by the triggers object
+    }
+    // Save the new sound to disk
+    fs.writeFileSync(path.resolve(orchestrationsFolder, `${newId.toString()}.json`), JSON.stringify(newOrch, null, 4));
+    // Save the new sound to the collection
+    lstOrchestrations.push(newOrch);
+    return {
+      status: 201,
+      data: newOrch
+    };
+  } catch (err) {
+    return {
+      status: 500,
+      data: err.message
+    };
+  }
 };
 
 /**
@@ -63,57 +91,83 @@ module.exports.createOrchestration = async (options) => {
  * @return {Promise}
  */
 module.exports.getOrchestration = async (options) => {
-  // Implement your business logic here...
-  //
-  // This function should return as follows:
-  //
-  // return {
-  //   status: 200, // Or another success code.
-  //   data: [] // Optional. You can put whatever you want here.
-  // };
-  //
-  // If an error happens during your business logic implementation,
-  // you should throw an error as follows:
-  //
-  // throw new Error({
-  //   status: 500, // Or another error code.
-  //   error: 'Server Error' // Or another error message.
-  // });
+  try {
+    // Look for the item in the array
+    const result = lstOrchestrations.find(obj => {
+      //console.log(`Obj Id: ${obj.id} options.id: ${options.id} Match:${obj.id == options.id}`)
+      return obj.id == options.id;
+    });
+    let response;
+    if (result) {
+      // TODO:Look up the actions for this orchestration.  Attach them in the result.actions array.
 
-  return {
-    status: 200,
-    data: 'getOrchestration ok!'
-  };
+      // TODO:Look up the triggers for this orchestration.  Attach them in the result.triggers array.
+
+      response = {
+        status: 200,
+        data: result
+      };
+    } else {
+      response = {
+        status: 404,
+        data: 'Item not found'
+      };
+    }
+    return response;
+  } catch (err) {
+    return {
+      status: 500,
+      data: err.message
+    };
+  }
 };
 
 /**
  * @param {Object} options
- * @param {} options.body 
+ * @param {} options.body
  * @throws {Error}
  * @return {Promise}
  */
 module.exports.updateOrchestration = async (options) => {
-  // Implement your business logic here...
-  //
-  // This function should return as follows:
-  //
-  // return {
-  //   status: 200, // Or another success code.
-  //   data: [] // Optional. You can put whatever you want here.
-  // };
-  //
-  // If an error happens during your business logic implementation,
-  // you should throw an error as follows:
-  //
-  // throw new Error({
-  //   status: 500, // Or another error code.
-  //   error: 'Server Error' // Or another error message.
-  // });
-
-  return {
-    status: 200,
-    data: 'updateOrchestration ok!'
-  };
+  try {
+    // Check that the payload has all required elements
+    if (options.body.name == undefined) return {
+      status: 400,
+      data: 'Required element <name> is missing.'
+    };
+    if (options.body.symphonyId == undefined) return {
+      status: 400,
+      data: 'Required element <symphonyId> is missing.'
+    };
+    if (!Number.isInteger(options.body.symphonyId)) return {
+      status: 400,
+      data: 'Element <symphonyId> must be an integer.'
+    };
+    // Find the orch in the collection
+    let theOrch = await this.getOrchestration(options)
+    if (theOrch.data.id != undefined) {
+      theOrch = options.body
+      theOrch.id = options.id // Just to make sure we update the right object
+      // Update the file
+      fs.writeFileSync(path.resolve(orchestrationsFolder, `${options.id.toString()}.json`), JSON.stringify(theOrch, null, 4));
+      // Update the collection
+      const foundIndex = lstOrchestrations.findIndex(x => x.id == options.id)
+      lstOrchestrations[foundIndex] = theOrch
+      return {
+        status: 200,
+        data: theOrch
+      };
+    }
+    return {
+      status: 404,
+      data: 'Item not found'
+    };
+  } catch (err) {
+    return {
+      status: 500,
+      data: err.message
+    };
+  }
 };
 
 /**
@@ -122,27 +176,29 @@ module.exports.updateOrchestration = async (options) => {
  * @return {Promise}
  */
 module.exports.deleteOrchestration = async (options) => {
-  // Implement your business logic here...
-  //
-  // This function should return as follows:
-  //
-  // return {
-  //   status: 200, // Or another success code.
-  //   data: [] // Optional. You can put whatever you want here.
-  // };
-  //
-  // If an error happens during your business logic implementation,
-  // you should throw an error as follows:
-  //
-  // throw new Error({
-  //   status: 500, // Or another error code.
-  //   error: 'Server Error' // Or another error message.
-  // });
-
-  return {
-    status: 200,
-    data: 'deleteOrchestration ok!'
-  };
+  try {
+    const theOrch = await this.getOrchestration(options)
+    if (theOrch.data.id != undefined) {
+      // Found it. Kill it.
+      lstOrchestrations = lstOrchestrations.filter((obj) => {
+        //console.log(`Obj Id: ${obj.id} options.id: ${options.id} Match:${obj.id != options.id}`)
+        return obj.id != options.id;
+      });
+      fs.unlinkSync(path.resolve(orchestrationsFolder, `${options.id.toString()}.json`))
+      return {
+        status: 200
+      };
+    }
+    return {
+      status: 404,
+      data: 'Item not found'
+    };
+  } catch (err) {
+    return {
+      status: 500,
+      data: err.message
+    };
+  }
 };
 
 /**
@@ -150,27 +206,36 @@ module.exports.deleteOrchestration = async (options) => {
  * @throws {Error}
  * @return {Promise}
  */
-module.exports.postOrchestrationsByOrchestrationIdExecute = async (options) => {
-  // Implement your business logic here...
-  //
-  // This function should return as follows:
-  //
-  // return {
-  //   status: 200, // Or another success code.
-  //   data: [] // Optional. You can put whatever you want here.
-  // };
-  //
-  // If an error happens during your business logic implementation,
-  // you should throw an error as follows:
-  //
-  // throw new Error({
-  //   status: 500, // Or another error code.
-  //   error: 'Server Error' // Or another error message.
-  // });
+module.exports.execute = async (options) => {
+  // Find the orchestration
+  try {
+    const theOrch = await this.getOrchestration(options)
+    if (theOrch.data.id != undefined) {
+      // Found it. Check for any actions.
+      if (theOrch.actions == undefined || theOrch.actions.length == 0) {
+        return {
+          status: 400,
+          data: 'No actions to execute.'
+        }
+      }
+      if (theOrch.startDelay == undefined) theOrch.startDelay = 0 // Set a default start delay of 0 ms.
+      setTimeout(() => {
+        // Timeout has expired.
+        // TODO: Execute all actions now.
 
-  return {
-    status: 200,
-    data: 'postOrchestrationsByOrchestrationIdExecute ok!'
-  };
+      }, theOrch.startDelay * 1000);
+      return {
+        status: 200
+      };
+    }
+    return {
+      status: 404,
+      data: 'Item not found'
+    };
+  } catch (err) {
+    return {
+      status: 500,
+      data: err.message
+    };
+  }
 };
-
